# invoice-cli

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: qr_matrix.rs
migrations/: V1__initial_schema.sql  V2__pay_link.sql  V3__client_defaults_and_lifecycle.sql  V4__logo_discounts_credits.sql
src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  money.rs  output.rs  render.rs  tax.rs  typst_assets.rs
src/commands/: agent_info.rs  clients.rs  config.rs  doctor.rs  invoices.rs  issuers.rs  mod.rs  products.rs  skill.rs  template.rs  update.rs
typst/shared/: _helpers.inc.typ  components.typ  invoice.typ
typst/templates/: boutique.typ  helvetica-nera.typ  monoline.typ  tiefletter-gold.typ  vienna.typ
