[package]
name = "invoice-cli"
version = "0.1.0"
edition = "2021"
description = "Beautiful invoices from the CLI — international, stateful, agent-friendly"
license = "MIT"
repository = "https://github.com/199-biotechnologies/invoice-cli"
readme = "README.md"
keywords = ["invoice", "billing", "typst", "pdf", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "invoice"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
refinery = { version = "0.8", features = ["rusqlite"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
rust-embed = "8"
tempfile = "3"
qrcode = { version = "0.14", default-features = false }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
