[package]
name = "invoice-cli"
version = "0.5.8"
edition = "2021"
description = "Beautiful invoices from the CLI — international, stateful, agent-friendly"
license = "MIT"
repository = "https://github.com/paperfoot/invoice-cli"
readme = "README.md"
keywords = ["invoice", "billing", "typst", "pdf", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "invoice"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
finance-core = "0.3"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = "8"
tempfile = "3"
qrcode = { version = "0.14", default-features = false }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
